google map now uses the complete width headerbar links now jumps to the correct position

--- a/src/_styles/main.amp.styl
+++ b/src/_styles/main.amp.styl
@@ -86,10 +86,14 @@ body
     display block
     height 3px
     background font-color
-    
+ 
 .main-container
   width 940px
   border 1px solid rgba(0,0,0,.1)
+
+.ordi-pagepart
+  padding-top headerbar-height
+  z-index 100
 
 .hidden
   display none
@@ -117,6 +121,35 @@ body
     padding-left: 0
   li
     margin-top: 0.5rem
+
+#adresse {
+    height: 100%;
+    min-width: 100%;
+
+    article {
+        height: 100%;
+    }
+
+    iframe {
+        width: 100%;
+        height: calc(100% - 8.5em - 5.5em - 0.5em);  
+    }
+    @include mobile {
+      iframe {
+        width: 90%;
+      }
+    }
+    @include tablet {
+        #loclink {
+            display: none;
+        }
+    }
+    @include desktop {
+        #loclink {
+            display: none;
+        }
+    }
+}
 
 .footer
   text-align center
